<resources>
    <string name="app_name">My New To Do list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo"> Título da Tarefa:</string>
    <string name="descricao">Descrição da Tarefa:</string>
    <string name="data">Escolha a data limite aqui</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
</resources>